GNOME Bugzilla – Bug 695710
Fails to build when only gdk and wayland backends are enabled
Last modified: 2013-04-29 07:04:12 UTC
I'm building clutter with: ./autogen.sh --prefix=/opt/wayland --enable-wayland-backend --enable-wayland-compositor That gets me the gdk and wayland backends enabled and the x11 backend disabled: • Clutter Backends: Windowing systems: gdk wayland (WARNING: Experimental backends enabled) Input backends: gdk wayland - Wayland compositor support enabled (WARNING: Experimental) With that setup, compiling fails with: CC clutter-stage-gdk.lo ./gdk/clutter-stage-gdk.c: In function 'clutter_stage_gdk_realize': ./gdk/clutter-stage-gdk.c:271:49: error: 'clutter_stage_gdk_update_foreign_event_mask' undeclared (first use in this function) ./gdk/clutter-stage-gdk.c:271:49: note: each undeclared identifier is reported only once for each function it appears in make[2]: *** [clutter-stage-gdk.lo] Error 1 However if I also enable the x11 backend it doesn't fail. Seems to be a bad #if guard.
Created attachment 238700 [details] [review] Fix GDK backend build when X11 support is disabled clutter_stage_gdk_update_foreign_event_mask is built when CLUTTER_WINDOWING_X11 is defined but used when GDK_WINDOWING_X11 is defined. Change that to build and use it when GDK_WINDOWING_X11 is defined.
(component -> general as this is gdk and not wayland)
I can confirm the bug an that the patch makes it build for me. Any chance of a review? This breaks the very nice instruction on http://wayland.freedesktop.org/clutter.html So it's a pity...
Review of attachment 238700 [details] [review]: looks okay.