GDK: fix build when the X11 backend is disabled

https://bugzilla.gnome.org/show_bug.cgi?id=695710